manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: eplastapi
spec:
    type: ClusterIP
    ports:
    - port: 5000 
    selector:
        app: eplastapi
