manifests/ingress-staging.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: eplast2
  name: routing-for-eplast
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
      - ___SiteDnsName___
    secretName: tls-secret-stg
  rules:
  - host: ___SiteDnsName___
    http:
      paths:
      - path: /api
        backend:
          serviceName: eplastapi
          servicePort: 5000
      - path: /swagger
        backend:
          serviceName: eplastapi
          servicePort: 5000          
      - path: /
        backend:
          serviceName: eplastweb
          servicePort: 80
